<resources>
    <string name="app_name">BD ROOM</string>
    <!--NavDrawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="more">Más…</string>
    <string name="shared_preferences">SharedPreferences</string>
    <string name="todo">ToDo</string>
    <string name="products">Productos</string>
    <string name="share">Compartir</string>
    <string name="exit">Salir</string>
    <string name="help">Ayuda</string>
    <!-- Header -->
    <string name="header_sub">(SharePreferences, Files, Room DB)</string>
    <string name="header_title">Android Persistence</string>
    <!--Form-->
    <string name="name">Nombre</string>
    <string name="cant">Cantidad</string>
    <string name="search">Buscar</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="save">Guardar</string>
    <string name="empty_data">No hay datos guardados</string>
    <!--Preferences-->
    <string name="preference_file_key">com.android.bdroom.ui.screen_shared_preferences</string>
    <string name="saved_name">NAME</string>
    <string name="msg_save">Guardado</string>
</resources>
